apps/homeassistant/manifests/homeassistant/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: homeassistant
    app.kubernetes.io/part-of: homeassistant
    app.kubernetes.io/version: 2022.2.9
  name: homeassistant
  namespace: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: server
      app.kubernetes.io/name: homeassistant
      app.kubernetes.io/part-of: homeassistant
  serviceName: homeassistant
  template:
    metadata:
      annotations:
        checksum.config/md5: dae798020f5621acbaef0bdc7f8ee53e
      labels:
        app.kubernetes.io/component: server
        app.kubernetes.io/name: homeassistant
        app.kubernetes.io/part-of: homeassistant
        app.kubernetes.io/version: 2022.2.9
    spec:
      containers:
      - env:
        - name: TZ
          value: Europe/Berlin
        image: homeassistant/aarch64-homeassistant:2022.2.9
        imagePullPolicy: IfNotPresent
        name: homeassistant
        ports:
        - containerPort: 8123
          name: http
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /
            port: http
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 10
        resources:
          limits:
            cpu: 400m
            memory: 1600Mi
          requests:
            cpu: 200m
            memory: 800Mi
        securityContext:
          privileged: false
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 2
        volumeMounts:
        - mountPath: /config
          name: homeassistant-config
        - mountPath: /config/configuration.yaml
          name: configs
          readOnly: true
          subPath: configuration.yaml
        - mountPath: /config/customize.yaml
          name: configs
          readOnly: true
          subPath: customize.yaml
        - mountPath: /config/scripts.yaml
          name: configs
          readOnly: true
          subPath: scripts.yaml
      hostNetwork: true
      nodeSelector:
        kubernetes.io/arch: arm64
      restartPolicy: Always
      serviceAccountName: homeassistant
      volumes:
      - configMap:
          name: homeassistant-configs
        name: configs
  volumeClaimTemplates:
  - metadata:
      name: homeassistant-config
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      storageClassName: qnap-nfs-storage
