apps/homeassistant/manifests/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: homeassistant
    app.kubernetes.io/part-of: homeassistant
    app.kubernetes.io/version: 2024.2.0
  name: homeassistant
  namespace: homeassistant
spec:
  clusterIP: None
  ports:
    - name: http
      port: 8123
      targetPort: http
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: homeassistant
    app.kubernetes.io/part-of: homeassistant
