apps/homeassistant/manifests/homeassistant/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: homeassistant
    app.kubernetes.io/part-of: homeassistant
    app.kubernetes.io/version: 2023.7.3
  name: homeassistant-nginx
  namespace: homeassistant
spec:
  ingressClassName: nginx
  rules:
  - host: home.ankhmorpork.thaum.xyz
    http:
      paths:
      - backend:
          service:
            name: homeassistant
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - home.ankhmorpork.thaum.xyz
    secretName: homeassistant-tls
